# pysqlitedb

./: pyproject.toml
pysqlitedb/: README.org  __init__.py  db.py
